# blockpoll

./: README.md  package.json
components/: Button.tsx  Loader.tsx  Navbar.tsx  Sidebar.tsx
models/: Instruction.ts  Poll.ts  Search.ts
pages/: 404.tsx  _app.tsx  index.tsx
pages/create/: index.tsx
pages/poll/[id]/: index.tsx  vote.tsx
program-rust/: Cargo.toml  LICENSE  README.md
program-rust/src/: lib.rs
styles/: Base.module.scss  CreatePoll.module.scss  Home.module.scss  Navbar.module.scss  PollResult.module.scss  PollVote.module.scss  Sidebar.module.scss  globals.scss
utils/: common.ts  solana.ts
