[package]
name = "blockpoll-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.9"
borsh = "0.9.3"
borsh-derive = "0.9.3"
thiserror = "1.0.30"

[dev-dependencies]
solana-program-test = "1.10.9"
solana-sdk = "1.10.9"

[lib]
name = "blockpoll"
crate-type = ["cdylib", "lib"]
